# RefinedOS

./: .gitignore  README.md
refined_os/: Cargo.toml
refined_os/.cargo/: config.toml
refined_os/src/: main.rs  vga_buffer.rs
