[package]
name = "refined_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# The profile used for `cargo build`
[profile.dev]
panic = "abort" # Disable stack unwinding on panic

# The profile used for `cargo build --release`
[profile.release]
panic = "abort" # Disable stack unwinding on panic